@@ -209,6 +209,8 @@ Release 0.2.0
    HBASE-761   IOE: Stream closed exception all over logs
    HBASE-763   ClassCastException from RowResult.get(String)
                (Andrew Purtell via Stack)
+   HBASE-764   The name of column request has padding zero using REST interface
+               (Sishen Freecity via Stack)
    
   IMPROVEMENTS
    HBASE-559   MR example job to count table rows
